kubernetes/speakr/deploy-speakr.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: speakr
  namespace: speakr
  labels:
    app.kubernetes.io/name: speakr
    app.kubernetes.io/component: web
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: speakr
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speakr
        app.kubernetes.io/component: web
    spec:
      containers:
      - name: speakr
        image: learnedmachine/speakr:0.10.6-alpha@sha256:371ed8ba18a9fff22609e192ea02cbe0ca82cc70462998f1c07f2cedba5d6ca6
        ports:
        - name: http
          containerPort: 8899
          protocol: TCP
        volumeMounts:
        - name: uploads
          mountPath: /data
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: speakr-uploads
