kubernetes/speakr/deploy-whisperx.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: whisperx
  namespace: speakr
  labels:
    app.kubernetes.io/name: speakr
    app.kubernetes.io/component: whisperx
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: speakr
      app.kubernetes.io/component: whisperx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speakr
        app.kubernetes.io/component: whisperx
    spec:
      runtimeClassName: nvidia
      priorityClassName: gpu-priority
      containers:
      - name: whisperx
        image: learnedmachine/whisperx-asr-service:0.4.1@sha256:9b91445e462b60f430a2edf3de1e25dc09ef85078727059627400e778174e293
        ports:
        - name: http
          containerPort: 9000
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: cache
          mountPath: /cache
        - name: cache
          mountPath: /.cache
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: whisperx-cache
