kubernetes/speakr/service-speakr.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: speakr
  namespace: speakr
  labels:
    app.kubernetes.io/name: speakr
    app.kubernetes.io/component: web

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: speakr
    app.kubernetes.io/component: web
