kubernetes/speakr/service-whisperx.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: whisperx
  namespace: speakr
  labels:
    app.kubernetes.io/name: speakr
    app.kubernetes.io/component: whisperx

spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: speakr
    app.kubernetes.io/component: whisperx
